avro_derive/tests/ui/avro_rs_501_unit_struct.stderr
error: AvroSchema derive does not work for unit structs
  --> tests/ui/avro_rs_501_unit_struct.rs:21:1
   |
21 | struct AbsoluteUnit;
   | ^^^^^^^^^^^^^^^^^^^^
